--- a/email-templates/verifyEmailNotification.ejs
+++ b/email-templates/verifyEmailNotification.ejs
@@ -523,7 +523,7 @@
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
-                                <a class="mcnButton " title="Visit Account" href="https://oven.trademarkers.com/customer/verify-account/<%= user._id %>" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Verify Email Address</a>
+                                <a class="mcnButton " title="Visit Account" href="<%= process.env.APP_URL %>/customer/verify-account/<%= user._id %>" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Verify Email Address</a>
                             </td>
                         </tr>
                     </tbody>
