--- a/email-templates/noa-8weeks-plain.ejs
+++ b/email-templates/noa-8weeks-plain.ejs
@@ -32,8 +32,8 @@
 <p >If you decide not to use the mark and want to abandon the entire process, please also let me know so we can close the file.
 </p>
 <p >You can respond with the following link, which is self-explanatory:<br>
-<a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" target="_blank" >
-  https://www.trademarkers.com/<%= mailData.number %>/statement-of-use
+<a href="<%= process.env.APP_URL %>/<%= mailData.number %>/statement-of-use" target="_blank" >
+  <%= process.env.APP_URL %>/<%= mailData.number %>/statement-of-use
 </a>
 </p>
 
