--- a/email-templates/souSummaryNotification.ejs
+++ b/email-templates/souSummaryNotification.ejs
@@ -283,7 +283,7 @@
                   <td class="es-m-p20b" width="270" align="left" style="padding:0;Margin:0;"> 
                    <table width="100%" cellspacing="0" cellpadding="0" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;"> 
                      <tr style="border-collapse:collapse;"> 
-                      <td align="left" style="padding:0;Margin:0;padding-bottom:5px;font-size:0px;" mc:edit="block_0"><a target="_blank" href="https://www.trademarkers.com/BB-0F2B-R" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:16px;text-decoration:underline;color:#659C35;"><img src="https://fcttwq.stripocdn.email/content/guids/CABINET_369a512c342a1675d6f2209fa716c5a9/images/34311585809437677.jpg" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;" class="adapt-img" width="270"></a></td> 
+                      <td align="left" style="padding:0;Margin:0;padding-bottom:5px;font-size:0px;" mc:edit="block_0"><a target="_blank" href="<%= process.env.APP_URL %>/BB-0F2B-R" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-size:16px;text-decoration:underline;color:#659C35;"><img src="https://fcttwq.stripocdn.email/content/guids/CABINET_369a512c342a1675d6f2209fa716c5a9/images/34311585809437677.jpg" alt style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;" class="adapt-img" width="270"></a></td> 
                      </tr> 
                    </table></td> 
                  </tr> 
@@ -506,6 +506,6 @@
    </table> 
    <p style="padding:40px;font-size: 14px;margin: 0;background: #fff;"><strong>LEGAL NOTICE:</strong> Trademarkers LLC assists customers with obtaining legal representation through its network of licensed attorneys. Trademarkers LLC is not a law firm and does not provide legal advice. Any information provided by Trademarkers LLC is for informational purposes only and does not constitute legal advice. Trademarkers LLC is not affiliated with the United States Patent and Trademark Office, nor any other governmental entity.  You were contacted because no attorney of record is listed in connection with your trademark application. If you are presently represented by an attorney, please delete and disregard this email.</p>
   </div>  
-  <!-- <img src="https://www.trademarkers.com/api/v1/mail/open?email=&eventId=" style="width:1px;height:1px"> -->
+  <!-- <img src="<%= process.env.APP_URL %>/api/v1/mail/open?email=&eventId=" style="width:1px;height:1px"> -->
  </body>
 </html>
