--- a/email-templates/noa-3weeks-plain.ejs
+++ b/email-templates/noa-3weeks-plain.ejs
@@ -40,8 +40,8 @@
 <p style="margin:0">&nbsp;</p>
 <p style="margin:0">
   At this point, you have several options – please click on the following link, which is self-explanatory:<br> 
-<a href="https://www.trademarkers.com/<%= mailData.number %>/statement-of-use" target="_blank" >
-  https://www.trademarkers.com/<%= mailData.number %>/statement-of-use
+<a href="<%= process.env.APP_URL %>/<%= mailData.number %>/statement-of-use" target="_blank" >
+  <%= process.env.APP_URL %>/<%= mailData.number %>/statement-of-use
 </a>
 </p>
 
