--- a/email-templates/orderCustomerNotification.ejs
+++ b/email-templates/orderCustomerNotification.ejs
@@ -917,7 +917,7 @@
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
-                                <a class="mcnButton " title="TradeMarkers Dashboard" href="https://www.trademarkers.com/customer/" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">My Account</a>
+                                <a class="mcnButton " title="TradeMarkers Dashboard" href="<%= process.env.APP_URL %>/customer/" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">My Account</a>
                             </td>
                         </tr>
                     </tbody>
@@ -1426,7 +1426,7 @@ Now that you're no longer completely new to Trademark questions, make sure to le
                         
                             To make sure our e-mail updates are delivered to your inbox, please add <a href="mailto:info@trademarkers.com" target="_blank">info@trademarkers.com</a> to your e-mail address book.<br>
 <br>
-<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="https://www.trademarkers.com/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
+<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="<%= process.env.APP_URL %>/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
 <br>
 <em>Copyright © 2019 TradeMarkers LLC, All rights reserved.</em>
                         </td>
