--- a/email-templates/newAccountNotification.ejs
+++ b/email-templates/newAccountNotification.ejs
@@ -525,7 +525,7 @@
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial; font-size: 16px; padding: 15px;">
-                                <a class="mcnButton " title="Visit Account" href="https://trademarkers.com/dashboard" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Visit Account</a>
+                                <a class="mcnButton " title="Visit Account" href="<%= process.env.APP_URL %>/customer" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Visit Account</a>
                             </td>
                         </tr>
                     </tbody>
@@ -802,7 +802,7 @@
                                                                         <tbody><tr>
                                                                             
                                                                                 <td align="center" valign="middle" width="24" class="mcnFollowIconContent">
-                                                                                    <a href="https://trademarkers.com" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
+                                                                                    <a href="<%= process.env.APP_URL %>" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-link-48.png" style="display:block;" height="24" width="24" class=""></a>
                                                                                 </td>
                                                                             
                                                                             
@@ -905,7 +905,7 @@
                         
                             To make sure our e-mail updates are delivered to your inbox, please add <a href="mailto:info@trademarkers.com" target="_blank">info@trademarkers.com</a> to your e-mail address book.<br>
 <br>
-<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="https://trademarkers.com/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="https://trademarkers.com/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
+<a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/contactus?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DContact-us%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNH73hNtB1XpWOoS42JExfYgT9va_A" href="<%= process.env.APP_URL %>/contact" target="_blank" title="Contact Us">Contact us</a> | <a data-saferedirecturl="https://www.google.com/url?hl=en&q=http://www.bookdepository.com/help/topic/HelpId/20/Our-privacy-policy?utm_source%3DSV-Footer%26utm_medium%3Demail-Service%26utm_term%3DPrivacy-Policy%26utm_content%3DFooter-links%26utm_campaign%3DOrder-dispatch&source=gmail&ust=1503720524267000&usg=AFQjCNFa0t4UX6ocun367uAsudKrkWahHQ" href="<%= process.env.APP_URL %>/privacy" target="_blank" title="Privacy Policy">Privacy policy</a><br>
 <br>
 <em>Copyright © 2021 TradeMarkers LLC, All rights reserved.</em>
                         </td>
