--- a/email-templates/verifyEmailNotification.ejs
+++ b/email-templates/verifyEmailNotification.ejs
@@ -570,7 +570,7 @@
 								<p><span style="font-size:18px">If you did not create an account, no further action is required.</span></p>
 								
 								<p><span style="padding-top:20px;font-size:14px">
-									If you’re having trouble clicking the "Verify Email Address" button, copy and paste the URL below into your web browser: https://https.trademarkers.com/customer/verify-account/<%= user._id %></span></p>
+									If you’re having trouble clicking the "Verify Email Address" button, copy and paste the URL below into your web browser: <%= process.env.APP_URL %>/customer/verify-account/<%= user._id %></span></p>
 <a> </a></div>
 <a> </a>
                         </td>
