--- a/views/order/checkout.ejs
+++ b/views/order/checkout.ejs
@@ -166,6 +166,12 @@
 		<div class="col-md-12">
 			<p>Sorry, Cart Empty</p>
 		</div>
+
+		<div class="col-12">
+			<div class="form-group mt-2 text-center">
+				<a href="/countries" class="btn btn-primary btn-black tn-rounded-primary">Select a Country</a>
+			</div>
+		</div>
 	<% } %>
 	</div>
 		
